betta-0.0.3.scss
/* ... */
.icon-button .text {
	height: 100%;
	vertical-align: middle;
	padding-left: 0.5rem;
	padding-right: 0.5rem;
}

.icon-button .material-icons-round {
	vertical-align: middle;
	color: #212121;
	font-size: 1.8rem;
}

.icon-button .material-icons-round.custom-icon{
	font-size: 1rem;
}

.icon-button.dark .material-icons-round {
	color: #ffffff;
}

@media(max-width: 800px) {
	body>.icon-button {
		padding: 0.75rem;
	}

	body>.icon-button .material-icons-round {
		font-size: 2.5rem;
	}
}

.sliding-button {
	display: inline-block;
	margin: auto;
	margin-right: 0;
}

.sliding-button>.content {
	width: 0rem;
	height: 1.4rem;
	margin-bottom: -0.3rem;
	overflow: hidden;
	display: inline-block;
	transition: 0.2s;
}

.sliding-button:hover>.content {
	width: 12rem;
	display: inline-block;
	transition: 0.2s;
}

/*-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
    Custom Classes
-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-*/

.center {
	text-align: center;
}

.italic {
	font-style: italic;
}

/* 
Used to set preferred break points, which will occur
between lines
*/
.line {
    display: inline-block;
}

.right {
	text-align: right;
}

.no-scroll {
	overflow: hidden
}

@media(max-width: 800px) {
	.no-scroll-mobile {
		overflow: hidden
	}
}

.hidden {
	visibility: hidden;
}

.betta_hidden {
    display: none;
}

.click-plane {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    cursor: pointer;
}

.inline-single {
	box-sizing: border-box;
	display: inline-block;
	width: 100%;
	padding: 0 1rem;
}

.inline-single label {
	margin-left: -0.5rem;
	margin-bottom: 0.5rem;
	display: inline-block;
	margin-right: 1.5%;
}

.inline-split {
	box-sizing: border-box;
	display: inline-block;
	width: 50%;
	padding: 0 1rem 1rem 1rem;
	vertical-align: top;
}

.inline-split.left {
	padding-right: 1rem;
}

.inline-split.right {
	padding-left: 1rem;
	text-align: left;
}

.inline-split .material-icons-round,
.inline-single .material-icons-round {
	vertical-align: bottom;
}

@media(max-width: 600px) {
	.inline-split {
		display: block;
		width: 100%;
	}

    .inline-split {
        padding-bottom: 1rem;
    }
}

/*---------------------------------------
	Gallery
---------------------------------------*/
#gallery,
.gallery {
	margin: 0 -0.5rem;
    padding-top: 1rem;
    padding-bottom: 1rem;
}

.gallery-item {
	box-sizing: border-box;
	vertical-align: top;
	display: inline-block;
	width: 50%;
	margin: 0;
	padding: 0 0.5rem 1rem 0.5rem;
}

.gallery-item>.content {
    position: relative;
}

.photo>img {
	width: 100%;
	box-shadow: $shadow-level-2;
	background: #f5f5f5;
	border-radius: 0.25rem;
}

.gallery-item>.content>.click-plane {
	border-radius: 0.25rem;
}

.gallery-item>.content>.click-plane.caption {
    background: $color-background;
    opacity: 0.85;
}

.gallery-item>.content>.click-plane.caption>p {
    padding: 0 1rem;
}

@media (max-width: 800px) {
    #gallery,
    .gallery {
        padding-bottom: 0rem;
    }

    .gallery-item {
        width: 100%;
        padding: 0 0.5rem 2rem 0.5rem;
    }
}

@media (max-width: 480px) {
    #gallery,
    .gallery {
        padding-bottom: 0.75rem;
    }

    .gallery-item {
        padding-bottom: 1.25rem;
    }
}
/*-------------------------------------*/

/*---------------------------------------
	Feed
---------------------------------------*/
.feed {
	max-width: 35rem;
	margin: 0 auto;
}

.feed>article>a {
	display: block;
	padding: 1rem;
	margin-top: 2rem;
	border-radius: 0.25rem;
	border-color: $color-main;
	transition: 0.2s;
	box-shadow: $shadow-level-1;
}

@media(hover: hover) {
	.feed>article>a:hover
	{
		background: $color-accent;
	}
}

.feed>article>a:active
{
	background: $color-active;
	box-shadow: $shadow-level-0;
}

.feed>article>a>h3 {
	margin: 0;
}

.feed>article>a>p {
	margin-bottom: 0;
}
/*-------------------------------------*/

/*---------------------------------------
	Card

    Not ready to be used.
---------------------------------------
.card {
	display: inline-block;
	vertical-align: top;
	height: 20rem;
	width: 15rem;
	margin: 1rem;
}

.card>.front,
.card>.back {
	position: relative;
	height: 100%;
	width: 100%;
	border-radius: 0.25rem;
	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
	background: rgba(255,255,255,1);
	overflow: hidden;
}

.card>.front>img {
	height: 100%;
	width: auto;
	max-width: none;
	border-radius: 0.25rem;
}

.card>.back>.profile {
	height: 11rem;
	width: 100%;
	border-top-left-radius: 1rem;
	border-top-right-radius: 1rem;
	border-bottom-left-radius: 0;
	border-bottom-right-radius: 0;
}

.card>.back>.profile>img {
	position: absolute;
	height: 9rem;
	width: 9rem;
	top: 2rem;
	left: 3rem;
	border-radius: 50%;
}

.card>.back>.profile>.icon-left,
.card>.back>.profile>.icon-right {
	position: absolute;
	height: 3rem;
	width: 3rem;
	top: 0.5rem;
	border-radius: 50%;
}

.card>.back>.profile>.icon-left {
	left: 0.5rem; 
}

.card>.back>.profile>.icon-right {
	right: 0.5rem; 
}
.card>.back>.profile>.icon-left>.material-icons-round,
.card>.back>.profile>.icon-right>.material-icons-round {
	width: 100%;
	font-size: 2rem;
	line-height: 3rem;
	color: #212121;
	text-align: center;
}

.card>.back>.description {
	height: 9rem;
	width: 100%;
	padding: 1rem;
	border-top-left-radius: 0;
	border-top-right-radius: 0;
	border-bottom-left-radius: 1rem;
	border-bottom-right-radius: 1rem;
}

.card>.back>.description>h5 {
	height: 1.5rem;
	margin: 0;
}
.card>.back>.description>h6 {
	margin: 0;
}
.card>.back>.description>p {
	margin: 0;
}

.card>.back>.description>.properties {
	width: 100%;
}

.card>.back>.description>.properties>.p-1,
.card>.back>.description>.properties>.p-2,
.card>.back>.description>.properties>.p-3{
	width: 100%;
	height: 1rem;
	margin-top: 0.5rem;
	border-radius: 0.5rem;
}

.card>.back>.description>.properties>.p-1>div ,
.card>.back>.description>.properties>.p-2>div ,
.card>.back>.description>.properties>.p-3>div {
	height: 100%;
	border-radius: 0.5rem;
}
/* ... */

